# Palomino

./: .anjuta_sym_db.db  Makefile.am  README.md  build-script  configure.ac  dev-help  install.coffee  install.js  test-help  uninstall.coffee  uninstall.js
.anjuta/session/: anjuta.session  dock-layout.xml
coffee/: palomino.coffee
data/: Makefile.am  com.rockiger.Gtk.Palomino.appdata.xml.in  com.rockiger.Gtk.Palomino.busname  com.rockiger.Gtk.Palomino.desktop.in  com.rockiger.Gtk.Palomino.gschema.xml
po/: POTFILES.in
src/: Makefile.am  com.rockiger.Gtk.Palomino.in  dbus.service  desktop  palomino.coffee  palomino.js  window.js
tests/: Makefile.am  testutil.py
